# griffin

./: MANIFEST.in  README.md  SSH_guide.md  bootstrap.py  conftest.py  crowdin.yml  install_dev_repos.py  launch_griffin.sh  pyproject.toml  pytest.ini  requirements.txt  runtests.py  setup.cfg  setup.py  setup_griffin.sh  test_direct_pylab.py  test_pylab.py
Griffin_IDE/: Griffin_IDE_Build_Process.txt  Griffin_IDE_development.txt  build-config.json  distribution.json  package.json  product.json
binder/: environment.yml
cache/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
changelogs/: Griffin-6.md
external-deps/griffin-remote-services/: .gitrepo  AUTHORS.txt  LICENSE.txt  environment.yml  kernel_enviroment.yml  pyinstaller.py  pyproject.toml
external-deps/griffin-remote-services/.github/workflows/: python-publish.yml
external-deps/griffin-remote-services/jupyter-config/: griffin_remote_services.json
external-deps/griffin-remote-services/scripts/: installer.sh  installer_dev.sh
external-deps/griffin-remote-services/spyder_remote_services/: __init__.py  __main__.py  app.py  desktop.ini  utils.py
external-deps/griffin-remote-services/spyder_remote_services/services/: __init__.py
external-deps/griffin-remote-services/spyder_remote_services/services/files/: base.py  handlers.py
external-deps/griffin-remote-services/spyder_remote_services/services/spyder_kernels/: desktop.ini  patches.py  provisioner.py
griffin/: __init__.py  dependencies.py  pil_patch.py  py3compat.py  pyplot.py  requirements.py
scripts/: griffin  (+3 more)
(+780 files in other folders)
