[project]
name = "griffin-remote-services"
authors = [{name = "Hendrik Louzada", email = "hendriklouzada@gmail.com"}]
description = "A remote server for Griffin IDE"
readme = "README.md"
license = { file = "LICENSE.txt" }
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "jupyter_server >=2.14.2,<3.0",
    "jupyter_client >=8.6.2,<9.0",
    "envs-manager <1.0.0",
    "orjson >=3.10.12,<4.0",
]

[tool.setuptools.dynamic]
version = {attr = "griffin_remote_services.__version__"}

[project.scripts]
griffin-server = "griffin_remote_services.__main__:main"

[project.entry-points.'jupyter_client.kernel_provisioners']
griffin-kernels-provisioner = 'griffin_remote_services.services.griffin_kernels.provisioner:GriffinKernelsProvisioner'


[project.optional-dependencies]
dev = [
    "pytest >= 7.3.1",
    "ruff >= 0.4.1",
    #"pyinstaller >= 5.10.1"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
